--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require-dev": {
     "scriptfusion/phpunit-immediate-exception-printer": "^1",
     "phpunit/phpunit": "^5.7",
-    "squizlabs/php_codesniffer": "3.*"
+    "squizlabs/php_codesniffer": "3.*",
+    "silverstripe/cms": "^4"
   },
   "extra": {
     "branch-alias": {
