--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             php -r "unlink('composer-setup.php');"
 
       - run: composer create-project firesphere/seeder:dev-master ~/var/www -n
+      - run: composer vendor-expose auto
       - run: vendor/bin/sake dev/build
 
       # run tests!
