--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,13 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
-    "silverstripe/framework": "^4",
-    "silverstripe/versioned": "^1"
+    "php": ">=5.6.0"
   },
   "require-dev": {
     "scriptfusion/phpunit-immediate-exception-printer": "^1",
     "phpunit/phpunit": "^5.7",
     "squizlabs/php_codesniffer": "3.*",
-    "silverstripe/cms": "^4"
+    "silverstripe/recipe-cms": "^1"
   },
   "extra": {
     "branch-alias": {
