--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,16 @@ jobs:
             php composer-setup.php --install-dir=/usr/local/bin --filename=composer
             php -r "unlink('composer-setup.php');"
 
+      - restore_cache:
+         keys:
+           - seeder-{{ checksum "composer.lock" }}
+           - seeder- # used if checksum fails
+
       - run: composer create-project firesphere/seeder:dev-master ~/var/www -n
       - run: composer vendor-expose auto
+
+      - save_cache:
+          key: seeder-{{ checksum "composer.lock" }}
 
       # run tests!
       - run: vendor/bin/phpunit --coverage-clover=coverage.xml -d memory_limit=512M tests/unit
