--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v2-composer-
 
-      - run: composer install ~/var/www -n
+      - run: composer install
       - run: composer vendor-expose auto
 
       # Save all dependencies to cache
