--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             php -r "if (hash_file('SHA384', 'composer-setup.php') === '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
             php composer-setup.php --install-dir=/usr/local/bin --filename=composer
             php -r "unlink('composer-setup.php');"
-      - run composer create-project firesphere/seeder ~/var/www -n
+      - checkout
       - restore_cache:
           keys:
             - v2-composer-{{ checksum "composer.lock" }}
@@ -42,6 +42,7 @@ jobs:
 
       - run: composer install
       - run: composer vendor-expose auto
+      - run: cp -r vendor/silverstripe/recipe-cms/mysite .
 
       # Save all dependencies to cache
       - save_cache:
@@ -49,7 +50,6 @@ jobs:
           paths:
             - vendor
             - resource
-            - mysite
 
       # run tests!
       - run: vendor/bin/phpunit --coverage-clover=coverage.xml -d memory_limit=512M tests/unit
